# spotify-web

./: Cargo.toml
src/: authorization.rs  error.rs  lib.rs  model.rs  scope.rs  spotify.rs
